2012-06-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Cleaned up some code, verified compatibility with TYPO3 4.7, raised requirements to TYPO3 4.5, resolves #38400

2012-04-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.4.0

2012-04-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed obsolete method tx_tesseract_utilities::wrapMessage(), resolves #32280

2012-03-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Moved initEmptyDataStrucure() method to data provider base class instead of interface, resolves #35048
	* Corrected creation of empty data structure to take structure type into account, resolves #35051

2012-02-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.3.0

2012-01-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added documentation about new negate flag for filter conditions, resolves #33322

2012-01-12 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected description of tx_tesseract_datacontroller_output::getPrefixId(), resolves #33154
	* Added API for message queue handling in the controller, resolves #9072

2012-01-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Implemented improvements to the API, resolves #33042

2011-12-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

    * Added utility method for getting a language object, resolves #32281

2011-08-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.2.0

2011-07-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added API for empty filter check, resolves #28285

2011-07-17 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added documentation about void filters, resolves #28276

2011-05-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.1.0

2011-05-17 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Enabled use of TypoScript to define default values for components properties, resolves #13660

2011-03-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>
