@@ -1,3 +1,7 @@
+2012-07-07 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Added check for missing service, resolves #38739
+
 2012-06-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Cleaned up some code, verified compatibility with TYPO3 4.7, raised requirements to TYPO3 4.5, resolves #38400
